Minor Bug Fixes
- Made parameters optional in CustomBUtton
- Added Model for Product list

--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #333;
+    background-color: #01012c;
     color: #ffcc00;
   }
   
